# prometheus-gpsd-exporter

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  module.nix
.vardrun/: config.yaml  issues.jsonl
src/: gpsd.rs  main.rs  metrics.rs
