[package]
name = "prometheus-gpsd-exporter"
version = "0.1.0"
edition = "2021"
authors = ["Ian Johannesen <ij@perlpimp.net>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "sync"] }
warp = "0.3"
prometheus = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
debug = false
